feat: add deps and make dummy code to prevent syntax error